FullQa New/src/objects/User.object
<CustomObject>
    <fields>
        <fullName>Months_In_Role__c</fullName>
        <formula>( today() - Sales_Tenure_Date__c) / 30.2</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Months In Role</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MyLodge_CaseSafeID__c</fullName>
        <externalId>true</externalId>
        <label>MyLodge_CaseSafeID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MyLodge_User_SF_ID__c</fullName>
        <description>user id in the MyLodge SF instance used for data migration.</description>
        <externalId>true</externalId>
        <label>MyLodge User SF ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Office__c</fullName>
        <label>Office</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BIS</fullName>
                </value>
                <value>
                    <fullName>BUK</fullName>
                </value>
                <value>
                    <fullName>FCV</fullName>
                </value>
                <value>
                    <fullName>GB</fullName>
                </value>
                <value>
                    <fullName>Green Bay, WI</fullName>
                </value>
                <value>
                    <fullName>HOU</fullName>
                </value>
                <value>
                    <fullName>IRV</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>P55</fullName>
                </value>
                <value>
                    <fullName>Pune, India</fullName>
                </value>
                <value>
                    <fullName>DUR</fullName>
                </value>
                <value>
                    <fullName>REM</fullName>
                </value>
                <value>
                    <fullName>ROC</fullName>
                </value>
                <value>
                    <fullName>SEA</fullName>
                </value>
                <value>
                    <fullName>DEN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PSM_State_Assigments__c</fullName>
        <description>Used for connector routing</description>
        <label>PSM State Assigments</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AB</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>BC</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>FM</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>GU</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MB</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MH</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Business_Area__c</fullName>
        <description>Used to populate a default Partner Business Area when a Primary CDM is populated on an Account record</description>
        <label>Partner Business Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q9__ElementsEmail__c</fullName>
        <label>Elements Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Q9__ElementsId__c</fullName>
        <externalId>true</externalId>
        <label>Elements Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Q9__IsElementsUser__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that the user has access to Elements.</description>
        <label>Elements User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>R6Service__DefaultAccount__c</fullName>
        <label>DefaultAccount</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RSM_Region__c</fullName>
        <label>RSM Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>South Central</fullName>
                </value>
                <value>
                    <fullName>Southeast</fullName>
                </value>
                <value>
                    <fullName>Southwest</fullName>
                </value>
                <value>
                    <fullName>Northwest</fullName>
                </value>
                <value>
                    <fullName>Northeast</fullName>
                </value>
                <value>
                    <fullName>Mid-Atlantic</fullName>
                </value>
                <value>
                    <fullName>North Central</fullName>
                </value>
                <value>
                    <fullName>Great Lakes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>US</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RoleNameStamp__c</fullName>
        <label>Role Name Stamp</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RoleName__c</fullName>
        <formula>UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Role Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAM_Booking_YTD_Target__c</fullName>
        <label>SAM Booking YTD Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SAM_Ding_YTD_Target__c</fullName>
        <label>SAM Ding YTD Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SAM_Lead_YTD_Target__c</fullName>
        <label>SAM Lead YTD Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SAM_Opp_YTD_Target__c</fullName>
        <label>SAM Opp YTD Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SalesRepID__c</fullName>
        <description>A Salesperson&apos;s Avalara ID</description>
        <inlineHelpText>A Salesperson&apos;s Avalara ID</inlineHelpText>
        <label>Sales Rep ID</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Group__c</fullName>
        <label>Partner Sales Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ADR</fullName>
                </value>
                <value>
                    <fullName>Billing</fullName>
                </value>
                <value>
                    <fullName>CertCapture</fullName>
                </value>
                <value>
                    <fullName>Communications</fullName>
                </value>
                <value>
                    <fullName>Business Solutions</fullName>
                </value>
                <value>
                    <fullName>Ecomm</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>Emerging</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>ESII - Mid ERP</fullName>
                </value>
                <value>
                    <fullName>Excise</fullName>
                </value>
                <value>
                    <fullName>High Ecomm</fullName>
                </value>
                <value>
                    <fullName>Launch</fullName>
                </value>
                <value>
                    <fullName>Matrix Master</fullName>
                </value>
                <value>
                    <fullName>Microsoft</fullName>
                </value>
                <value>
                    <fullName>NetSuite</fullName>
                </value>
                <value>
                    <fullName>SDR</fullName>
                </value>
                <value>
                    <fullName>SMB ERP</fullName>
                </value>
                <value>
                    <fullName>Vert ERP &amp; MLM</fullName>
                </value>
                <value>
                    <fullName>SOHO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Tenure_Date__c</fullName>
        <label>Role Tenure Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Tenure_Days__c</fullName>
        <formula>Today() -  Sales_Tenure_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Role Tenure Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Tenure__c</fullName>
        <formula>IF(Sales_Tenure_Days__c &lt; 90, &quot;a)0-3 Months&quot;, IF(AND(Sales_Tenure_Days__c &gt;91,Sales_Tenure_Days__c &lt;=180), &quot;b)3-6 Months&quot;, IF(AND(Sales_Tenure_Days__c &gt;181,Sales_Tenure_Days__c &lt;=365), &quot;c)6-12 Months&quot;, IF(AND(Sales_Tenure_Days__c &gt;366,Sales_Tenure_Days__c &lt;=486), &quot;d)12-18 Months&quot;,&quot;e)18+ Months&quot;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Tenure</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Schedule_Once_Profile_URL__c</fullName>
        <description>Repurposed for ChiliPiper Schedule URLs

Attribute will be used for Eloquoa campaigns.
Loyalty: Susan Gover IBST -2280</description>
        <label>Meeting Scheduling Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SendToZBilling__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send To Z-Billing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ServiceIntergrationUser__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to designation service or integration accounts that are not used by humans.</description>
        <label>Service/Intergration User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Special_Permission__c</fullName>
        <label>Special Permission</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Merge_Account</fullName>
                </value>
                <value>
                    <fullName>CanUpdateLockedOpportunities</fullName>
                </value>
                <value>
                    <fullName>CanUpdateFrozenOpportunity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TT_Certs_Call__c</fullName>
        <description>TimeTrade Certs Call</description>
        <inlineHelpText>TimeTrade Certs Call</inlineHelpText>
        <label>CP Certs Call</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>TT_CheckIn__c</fullName>
        <description>Time Trade 30 minute check-in call</description>
        <inlineHelpText>Time Trade 30 minute check-in call</inlineHelpText>
        <label>CP CheckIn</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>TT_Returns__c</fullName>
        <description>Time Trade Returns Call</description>
        <inlineHelpText>Time Trade Returns Call</inlineHelpText>
        <label>CP Returns</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>TT_SST_Call__c</fullName>
        <description>Time Trade link for an SST call</description>
        <inlineHelpText>Time Trade link for an SST call</inlineHelpText>
        <label>CP SST Call</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>TT_WelcomeCall__c</fullName>
        <description>Time Trade link for 1 hr welcome letter</description>
        <inlineHelpText>Time Trade link for 1 hr welcome letter</inlineHelpText>
        <label>CP_WelcomeCall</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>UserID__c</fullName>
        <description>UserID for assigning Owner to objects via file import, etc.</description>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>UserID for assigning Owner to objects via file import, etc.</inlineHelpText>
        <label>UserID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Validation_Exempt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Validation Exempt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Xactly_Person_Name__c</fullName>
        <description>https://jira.avalara.com/browse/IBST-7594
Owner Susan Gover
Values will be formatted like this: &quot;Jonathan Wintermeyer (89055)&quot; </description>
        <label>Xactly Person Name</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>YTD_MSP_Ding_Quota__c</fullName>
        <formula>CASE(Month(Today()), 1,  MSP_Ding_Quota__c * 0.04, 2, MSP_Ding_Quota__c * 0.08, 3, MSP_Ding_Quota__c * 0.2, 4, MSP_Ding_Quota__c * 0.25,MSP_Ding_Quota__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>YTD MSP Ding Quota</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cnx__Agent_AutoLogin__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Auto Login</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cnx__Agent_Extension__c</fullName>
        <description>Obsolete, use the custom field Agent Phone Extension</description>
        <label>obsolete</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cnx__Agent_ID__c</fullName>
        <label>Agent Id</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cnx__Agent_MobileAgent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobile Agent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cnx__Agent_MobileMode__c</fullName>
        <label>Mobile Agent Mode</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CALL_BY_CALL</fullName>
                </value>
                <value>
                    <fullName>NAILED_CONNECTION</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cnx__Agent_MobileNumber__c</fullName>
        <label>Mobile Agent Dial Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>cnx__Agent_PasswordEncrypted__c</fullName>
        <label>Agent Password</label>
        <length>127</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>cnx__Agent_Password__c</fullName>
        <label>obsolete</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cnx__Agent_Phone_Extension__c</fullName>
        <label>Agent Extension</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>cnx__Agent_SpeedDialNumbers__c</fullName>
        <description>A list of names and numbers that will be added to the speed dial list.</description>
        <label>Speed Dial Numbers</label>
        <length>1060</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>com_smartsheet__ShowSmartsheetIntroduction__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Controls whether a user sees the Smartsheet introduction (splash) page when they first access a Smartsheet link page, edit page, or tab.</description>
        <label>Show Smartsheet Introduction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__EchoSign_Allow_Delegated_Sending__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EchoSign - Allow Sending As Other Users</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__EchoSign_Email_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox indicates that the user&apos;s email address has been validated in EchoSign API.</description>
        <inlineHelpText>This checkbox indicates that the user&apos;s email address has been validated in EchoSign API.</inlineHelpText>
        <label>EchoSign Email Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>icAgentConsole__incCustomScreenpop__c</fullName>
        <description>Value of this field to be updated from inContact Agent Console app, use this field to get the value of inContact script variables.</description>
        <label>inContact Custom Screenpop</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>n2de__Is_logged_out__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, user has logged and is not available to receive distributions from the Distribution Engine</inlineHelpText>
        <label>Is logged out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>solution_reviewer__c</fullName>
        <label>Solution_Reviewer</label>
        <relationshipName>Users</relationshipName>
        <restrictedAdminField>true</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>togglAPIToken__c</fullName>
        <description>Stores the toggl API Token for this user after successful login. The token is good for 24 hours.</description>
        <label>Toggle API Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>toggleAPITokenExpiration__c</fullName>
        <description>The date/time the current toggle API Token will expire and require a reauth.</description>
        <label>Toggle API Token Expiration Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>widget_heirarchy__c</fullName>
        <label>widget_heirarchy</label>
        <relationshipName>Users1</relationshipName>
        <restrictedAdminField>true</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CaseSafeID__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.NAME</columns>
        <columns>CREATED_BY_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notEqual</operation>
            <value>Partner Launch Community</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>Active_API_User</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CaseSafeID__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.NAME</columns>
        <columns>CREATED_BY_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>Ava2 API</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.USERTYPE</field>
            <operation>equals</operation>
            <value>S</value>
        </filters>
        <label>Active API User</label>
    </listViews>
    <listViews>
        <fullName>Active_Last_30_Days</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.LAST_LOGIN</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.USERTYPE</field>
            <operation>equals</operation>
            <value>S</value>
        </filters>
        <label>Active Last 30 Days</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>contains</operation>
            <value>CDM,Channel</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>FS users</label>
    </listViews>
    <listViews>
        <fullName>Administratoors</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>admin</value>
        </filters>
        <label>Administrators</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <columns>MANAGER</columns>
        <columns>UPDATEDBY_USER.NAME</columns>
        <columns>CaseSafeID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <listViews>
        <fullName>Brazil_Users1</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.PROFILE.USERTYPE</columns>
        <columns>LANGUAGE</columns>
        <columns>LOCALE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>Brazil</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Brazil Users Active</label>
    </listViews>
    <listViews>
        <fullName>CertCapture_Excise_Dual_Profile</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>CertCapture/Excise Dual Profile</value>
        </filters>
        <label>CertCapture/Excise Dual Profile</label>
    </listViews>
    <listViews>
        <fullName>Compli_Team</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>equals</operation>
            <value>Compli</value>
        </filters>
        <label>Compli Team</label>
    </listViews>
    <listViews>
        <fullName>Frozen_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IS_FROZEN</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notContain</operation>
            <value>Community</value>
        </filters>
        <label>Frozen Users</label>
    </listViews>
    <listViews>
        <fullName>InactiveLoyaltyUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.FORECAST_ENABLED</columns>
        <columns>CAM_Territory__c</columns>
        <columns>CaseSafeID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>contains</operation>
            <value>CAM</value>
        </filters>
        <label>Inactive Loyalty Users</label>
    </listViews>
    <listViews>
        <fullName>InactiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CaseSafeID__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.NAME</columns>
        <columns>CREATED_BY_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Inactive Users</label>
    </listViews>
    <listViews>
        <fullName>Inside_Sales_All</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>LIVEAGENT_USER</columns>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.NAME</columns>
        <columns>CaseSafeID__c</columns>
        <columns>CORE.USERS.PHONE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>Inside Sales</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Inside Sales All Active</label>
    </listViews>
</CustomObject>